--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <title>Document</title>
-
-    <style>
+        <title>Document</title>
+        
+        <style>
         .success {
             display: none;
             border: solid 2px green;
@@ -53,53 +53,27 @@
                 <input name="email" id="email" required type="email" class="input-group" />
                 <br>
                 <div class="d-grid gap-2">
-                    <button class="btn btn-primary" type="submit" id="button">Button</button>
+                    <button class="btn btn-primary" type="submit" id="button-email">Button</button>
+                </div>
+
+            </div>
+            <hr/>
+            <div class="card-body">
+                Redefinir senha.
+                <form class="form-group" action="/subscribe" method="POST"></form>
+                <br>
+                <input name="password" id="password" required type="password" class="input-group" />
+                <br>
+                <div class="d-grid gap-2">
+                    <button class="btn btn-primary" type="submit" id="button-pass">Button</button>
                 </div>
 
             </div>
         </div>
     </div>
 
-    <script>
-
-        // form submission
-
-        let button = document.getElementById("button")
-        let email = document.getElementById("email")
-        let success = document.getElementById("success")
-        let error = document.getElementById("error")
-
-        button.addEventListener('click', event => {
-            event.preventDefault()
-
-            if (email.value == null || email.value == "") {
-                error.style.display = 'block'
-                setInterval(() => {
-                    error.style.display = 'none'
-                }, 3000)
-            } else {
-                let fetchData = {
-                    method: 'POST',
-                    body: JSON.stringify({ email: email.value, js: true }),
-                    headers: { "Content-Type": "application/json" }
-                }
-
-                fetch('/subscribe', fetchData).then(res => {
-                    if (res.ok) {
-                        console.log('Ok')
-                    } else {
-                        error.style.display = 'block'
-                        setInterval(() => {
-                            error.style.display = 'none'
-                        }, 3000)
-                    }
-                })
-            }
-        })
-
-
-    </script>
-
+<script src="js/redefinePassword.js"></script>
+<script src="js/redefinePassword.js"></script>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
